--- a/client/src/style.css
+++ b/client/src/style.css
@@ -16,6 +16,10 @@ body,
   font-weight: 700;
 }
 
+.small-text {
+  font-size: 0.85rem;
+}
+
 @media (min-width: 576px) {
   .card-height {
     height: 30rem;
