--- a/client/src/style.css
+++ b/client/src/style.css
@@ -34,6 +34,10 @@ select:valid {
   color: black;
 }
 
+.btn:focus {
+  box-shadow: none !important;
+}
+
 @media (min-width: 576px) {
   .card-height {
     height: 30rem;
