--- a/client/src/style.css
+++ b/client/src/style.css
@@ -16,25 +16,6 @@ body,
   font-weight: 700;
 }
 
-.material-icons.md-22 {
-  font-size: 22px;
-}
-
-#email-exists-error,
-#username-exists-error,
-#username-length-error,
-#password-length-error,
-#confirm-password-length-error,
-#confirm-password-no-match-error,
-#title-exists-error,
-#category-invalid-error,
-#status-invalid-error,
-#priority-invalid-error,
-#notes-length-error {
-  display: flex;
-  color: #ff0000;
-}
-
 .form-error {
   display: flex;
   color: #ff0000;
@@ -50,6 +31,10 @@ select:valid {
 
 .btn:focus {
   box-shadow: none !important;
+}
+
+.alert-container {
+  z-index: 3;
 }
 
 @media (min-width: 576px) {
