--- a/client/src/style.css
+++ b/client/src/style.css
@@ -66,12 +66,14 @@ select:valid {
   font-size: 28px;
 }
 
-.reverify-link {
+.reverify-link,
+.forgot-password-link {
   color: #999999;
   text-decoration: none;
 }
 
-.reverify-link:hover {
+.reverify-link:hover,
+.forgot-password-link:hover {
   color: #0d6efd;
   text-decoration: underline;
 }
