--- a/client/src/style.css
+++ b/client/src/style.css
@@ -45,6 +45,10 @@ select:valid {
   cursor: pointer;
 }
 
+.entry-comment:hover {
+  cursor: default;
+}
+
 .tooltip-arrow {
   display: none !important;
 }
